[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/tela_inicial/tela_inicial.gd" type="Script" id=1]
[ext_resource path="res://assets/Ui/inicio_novo.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/enterp.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/enter.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/rafaProtagonista.png" type="Texture" id=5]
[ext_resource path="res://players/tela_inicial/RafaProtagonista.gd" type="Script" id=6]
[ext_resource path="res://assets/aúdios/music_1_menu.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/aúdios/botão tela inicial.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Ui/back_transparent.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/sobrenosbot.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/sobrennosbotp.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/controlesbot.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/controlesbotp.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/sairbot.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/sairbotp.png" type="Texture" id=15]

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "andarembora"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=1]
resource_name = "olharlados"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.7, 4.1, 5.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 17, 1, 33, 1 ]
}

[node name="tela_inicial" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 321.419, 186.5 )
scale = Vector2( 0.631678, 0.618333 )
texture = ExtResource( 2 )

[node name="botao_enter" type="TextureButton" parent="."]
margin_left = 454.0
margin_top = 282.0
margin_right = 636.0
margin_bottom = 356.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="RafaProtagonista" type="Sprite" parent="."]
position = Vector2( 317, 215 )
scale = Vector2( 12.9697, 12.9697 )
texture = ExtResource( 5 )
hframes = 16
vframes = 4
frame = 16
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RafaProtagonista"]
anims/Idle = SubResource( 4 )
anims/andarembora = SubResource( 2 )
anims/olharlados = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="exemplo_button_sobre" type="Sprite" parent="."]
visible = false
position = Vector2( 322, 179.5 )
scale = Vector2( 1.01563, 1.02473 )
texture = ExtResource( 9 )

[node name="btn_fases" type="Button" parent="."]
margin_left = 538.0
margin_top = 164.0
margin_right = 615.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( -25, -158 )
text = "fases"

[node name="botsobre" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 288.0
margin_right = 118.0
margin_bottom = 328.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="botcontroles" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 321.0
margin_right = 118.0
margin_bottom = 361.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="botsair" type="TextureButton" parent="."]
visible = false
margin_left = 1.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 40.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true

[connection signal="pressed" from="botao_enter" to="." method="_on_botao_enter_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="btn_fases" to="." method="_on_btn_fases_pressed"]
[connection signal="pressed" from="botsobre" to="." method="_on_botsobre_pressed"]
[connection signal="pressed" from="botcontroles" to="." method="_on_botcontroles_pressed"]
[connection signal="pressed" from="botsair" to="." method="_on_botsair_pressed"]
